# Marabou

./: .gitignore  MANIFEST.in  setup.cfg  setup.py
.github/workflows/: ci.yml  release.yml
maraboupy/: setup.py
tools/: copy_artifacts.sh  create_release.sh
