[metadata]
name = maraboupy-NeuralNetworkVerification
version = 0.0.0
author = Marabou
description = Marabou Neural Network Verification Framework Python Interface
license_files = COPYING
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/NeuralNetworkVerification/Marabou
classifiers =
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3
    Operating System :: MacOS
    Operating System :: POSIX :: Linux

[options]
packages = find:
python_requires = >=3.5